<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/>
	</parent>
	<groupId>vaultiq</groupId>
	<artifactId>vaultiq-session</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>vaultiq-session</name>
	<description>vaultiq-session is a session management library for devices, that integrates with vaultiq token issuer and authenticator libraries.</description>
	<url>https://vaultiq.co</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url> <!-- Updated License URL -->
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>rajumb0232</id>
			<name>Raju Gowda</name>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/vaultiq/vaultiq-session.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:vaultiq/vaultiq-session.git</developerConnection>
		<url>https://github.com/vaultiq/vaultiq-session</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
	</properties>

	<dependencies>

		<!-- Cache -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Encoding & Decoding Lib -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>repackage</id>
						<goals>
							<goal>repackage</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
